mendel.peg.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Grammar: peg$parseGrammar },
      peg$startRuleFunction  = peg$parseGrammar,

      peg$c0 = function(s) {
          let l = [];
          s.forEach((s) => {
              if (s) {
                  l = l.concat(s);
              }
          });
          return ast1.call(ast1.lookup("__do"), l);
      },
      peg$c1 = function() {return null},
      peg$c2 = ";",
      peg$c3 = peg$literalExpectation(";", false),
      peg$c4 = function(s) {return s},
      peg$c5 = "{",
      peg$c6 = peg$literalExpectation("{", false),
      peg$c7 = "}",
      peg$c8 = peg$literalExpectation("}", false),
      peg$c9 = "if",
      peg$c10 = peg$literalExpectation("if", false),
      peg$c11 = "else",
      peg$c12 = peg$literalExpectation("else", false),
      peg$c13 = function(e, b1, i) {return i},
      peg$c14 = function(e, b1, b) {return b},
      peg$c15 = function(e, b1, el) {
          return ast1.call(ast1.lookup("__if"),[
              ast1.code([],[],'',e),
              ast1.code([],[],'',b1),
              //ast1.el,
          ]);
      },
      peg$c16 = "while",
      peg$c17 = peg$literalExpectation("while", false),
      peg$c18 = function(e, b) {return {"while": {"cond":e, "block":b}}},
      peg$c19 = "func",
      peg$c20 = peg$literalExpectation("func", false),
      peg$c21 = function(name, func_in, func_out, b) {
          let inName = [];
          let inMode = [];
          func_in.forEach((p) => {
              inName.push(p["name"]);
              inMode.push(p["mode"]);
          });
          return ast1.call(ast1.lookup('__assign'), [
              ast1.symbol(name, "const"),
              ast1.code(
                  inName, inMode, "", b
              ),
          ]);
      },
      peg$c22 = "(",
      peg$c23 = peg$literalExpectation("(", false),
      peg$c24 = ")",
      peg$c25 = peg$literalExpectation(")", false),
      peg$c26 = function(p) {return p},
      peg$c27 = ",",
      peg$c28 = peg$literalExpectation(",", false),
      peg$c29 = function(p1, p) {return p},
      peg$c30 = function(p1, pn) {return [p1].concat(pn)},
      peg$c31 = "var",
      peg$c32 = peg$literalExpectation("var", false),
      peg$c33 = function(m, n, t) {
          if (!t) t = {multi:false, t:null}
          if (m) {
          	t["mode"] = "var"
          } else {
          	t["mode"] = "const"
          }
          t["name"]=n
          return t
      },
      peg$c34 = "...",
      peg$c35 = peg$literalExpectation("...", false),
      peg$c36 = function(multi, t) {
          if (multi === "...") {
              multi = true
          } else {
              multi = false
          }
          return {"multi": multi, "type":t}
      },
      peg$c37 = function(t1, t) {return t},
      peg$c38 = function(t1, tn) {return [t1].concat(tn)},
      peg$c39 = "const",
      peg$c40 = peg$literalExpectation("const", false),
      peg$c41 = "=",
      peg$c42 = peg$literalExpectation("=", false),
      peg$c43 = function(mode, il, el) {return el},
      peg$c44 = function(mode, il, el) {
          return {"mode": mode, "var":il, "exp":el};
      },
      peg$c45 = function(id1, id) {return id},
      peg$c46 = function(id1, idn) {return [id1].concat(idn)},
      peg$c47 = function(id) {return {"name":id}},
      peg$c48 = function(id, t) {return {"name":id, "type":t}},
      peg$c49 = function(e1, e2) {
          let l = [];

          for (var i = 0; i < e1.length; i++) {
              if (!e2[i]) {
                  throw "Assignment expr list length invalid"
              }
              l.push(
                  ast1.call(ast1.lookup("__assign"), [
                      e1[i],
                      e2[i],
                  ])
              );
          }

          return l;
      },
      peg$c50 = ":=",
      peg$c51 = peg$literalExpectation(":=", false),
      peg$c52 = function(i1, e2) {
          let l = [];

          for (var i = 0; i < i1.length; i++) {
              if (!e2[i]) {
                  throw "ShortVarDecl expr list length invalid"
              }
              l.push(
                  ast1.call(ast1.lookup("__assign"), [
                      ast1.symbol(i1[i], "var"),
                      e2[i],
                  ])
              );
          }

          return l;
      },
      peg$c53 = "return",
      peg$c54 = peg$literalExpectation("return", false),
      peg$c55 = function(e) {
          return ast1.call(ast1.lookup("__exit"), []);
      },
      peg$c56 = "continue",
      peg$c57 = peg$literalExpectation("continue", false),
      peg$c58 = function() {return {"continue":null}},
      peg$c59 = "break",
      peg$c60 = peg$literalExpectation("break", false),
      peg$c61 = function() {return {"break":null}},
      peg$c62 = function(e1, e) {return e},
      peg$c63 = function(e1, en) {return [e1].concat(en)},
      peg$c64 = function(e1, op, e) {return [op, e]},
      peg$c65 = function(e1, en) {return evalBiExpr([e1].concat(en))},
      peg$c66 = function(e) {return e},
      peg$c67 = function(op, e) {return evalUExpr([op, e])},
      peg$c68 = "*",
      peg$c69 = peg$literalExpectation("*", false),
      peg$c70 = "/",
      peg$c71 = peg$literalExpectation("/", false),
      peg$c72 = "%",
      peg$c73 = peg$literalExpectation("%", false),
      peg$c74 = "+",
      peg$c75 = peg$literalExpectation("+", false),
      peg$c76 = "-",
      peg$c77 = peg$literalExpectation("-", false),
      peg$c78 = "==",
      peg$c79 = peg$literalExpectation("==", false),
      peg$c80 = "!=",
      peg$c81 = peg$literalExpectation("!=", false),
      peg$c82 = "<=",
      peg$c83 = peg$literalExpectation("<=", false),
      peg$c84 = "<",
      peg$c85 = peg$literalExpectation("<", false),
      peg$c86 = ">=",
      peg$c87 = peg$literalExpectation(">=", false),
      peg$c88 = ">",
      peg$c89 = peg$literalExpectation(">", false),
      peg$c90 = "&&",
      peg$c91 = peg$literalExpectation("&&", false),
      peg$c92 = "||",
      peg$c93 = peg$literalExpectation("||", false),
      peg$c94 = "!",
      peg$c95 = peg$literalExpectation("!", false),
      peg$c96 = function(e1, en) {
          if (!en) return e1;
          let pe = e1;
          en.forEach((e) => {
              switch (e[0]) {
                  case "index":
                      pe = ast1.call(ast1.lookup("__index"), [pe, e[1]]);
                      break;
                  case "arg":
                      pe = ast1.call(pe, e[1]);
                      break;
                  default:
                      throw e[0]+" unknown";
              }
          });
          return pe;
      },
      peg$c97 = function(id) {return ast1.lookup(id)},
      peg$c98 = "[",
      peg$c99 = peg$literalExpectation("[", false),
      peg$c100 = "]",
      peg$c101 = peg$literalExpectation("]", false),
      peg$c102 = function(e) {return ["index",e]},
      peg$c103 = function(arg) {return ["arg",arg]},
      peg$c104 = "array",
      peg$c105 = peg$literalExpectation("array", false),
      peg$c106 = function(t) {return ["array", t]},
      peg$c107 = function(func_in, func_out) {return ["func", {"in":func_in, "out":func_out}]},
      peg$c108 = function(func_in, func_out, b) {
          let inName = [];
          let inMode = [];
          func_in.forEach((p) => {
              inName.push(p["name"]);
              inMode.push(p["mode"]);
          });
          return ast1.code(inName, inMode, "", b);
      },
      peg$c109 = function(t, v) {
          switch (t[0]) {
              case "array":
                  return ast1.call(ast1.lookup("__array"), v);
          }
      },
      peg$c110 = function(el) {return el},
      peg$c111 = function(v) {return v},
      peg$c112 = "//",
      peg$c113 = peg$literalExpectation("//", false),
      peg$c114 = function() {return},
      peg$c115 = "_",
      peg$c116 = peg$literalExpectation("_", false),
      peg$c117 = function(head, tail) {return head+tail.join("")},
      peg$c118 = function() {return ast1.literal(parseInt(text(), 10), 'int')},
      peg$c119 = ".",
      peg$c120 = peg$literalExpectation(".", false),
      peg$c121 = function() {return ast1.literal(parseFloat(text(), 10), 'float')},
      peg$c122 = "e",
      peg$c123 = peg$literalExpectation("e", false),
      peg$c124 = "E",
      peg$c125 = peg$literalExpectation("E", false),
      peg$c126 = "`",
      peg$c127 = peg$literalExpectation("`", false),
      peg$c128 = function(cs) {return ast1.literal(cs.join(""), "string")},
      peg$c129 = "\"",
      peg$c130 = peg$literalExpectation("\"", false),
      peg$c131 = function(c) {return c},
      peg$c132 = "'",
      peg$c133 = peg$literalExpectation("'", false),
      peg$c134 = function(c) {return ast1.literal(c, "string")},
      peg$c135 = " ",
      peg$c136 = peg$literalExpectation(" ", false),
      peg$c137 = "\t",
      peg$c138 = peg$literalExpectation("\t", false),
      peg$c139 = "\n",
      peg$c140 = peg$literalExpectation("\n", false),
      peg$c141 = "\r",
      peg$c142 = peg$literalExpectation("\r", false),
      peg$c143 = peg$anyExpectation(),
      peg$c144 = /^[a-zA-Z]/,
      peg$c145 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c146 = /^[0-9]/,
      peg$c147 = peg$classExpectation([["0", "9"]], false, false),
      peg$c148 = "\\",
      peg$c149 = peg$literalExpectation("\\", false),
      peg$c150 = function(c) {
          switch (c) {
              case "a": return "\a";
              case "b": return "\b";
              case "f": return "\f";
              case "n": return "\n";
              case "r": return "\r";
              case "t": return "\t";
              case "v": return "\v";
              default: return c;
          }
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseGrammar() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseStatement();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseStatement();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseComment();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseReturn();
      if (s1 === peg$FAILED) {
        s1 = peg$parseContinue();
        if (s1 === peg$FAILED) {
          s1 = peg$parseBreak();
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s3 = peg$c2;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseIf();
        if (s1 === peg$FAILED) {
          s1 = peg$parseWhile();
          if (s1 === peg$FAILED) {
            s1 = peg$parseFuncDecl();
          }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseDeclaration();
          if (s1 === peg$FAILED) {
            s1 = peg$parseSimpleStatement();
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s3 = peg$c2;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c4(s1);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseSimpleStatement() {
    var s0;

    s0 = peg$parseAssignment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseShortVarDecl();
      if (s0 === peg$FAILED) {
        s0 = peg$parseExpr1();
      }
    }

    return s0;
  }

  function peg$parseBlock() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseStatement();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseStatement();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s5 = peg$c7;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseIf() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
